--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -415,6 +415,10 @@
                 padding-left: 50px;
                 text-align: start;
 
+                .contacts-title {
+                    text-align: start;
+                }
+
                 .contact-list {
                     gap: 24px;
                     .contact-group {
