--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -118,44 +118,53 @@
         min-height: 64px;
 
         .cta-button {
-                display: inline-flex;
-                align-items: center;
-                justify-content: center;
-                gap: 12px;
-                border-radius: 4px;
-                text-decoration: none;
-                padding: 11px 16px;
-                font-size: 16px;
-                font-weight: 600;
-                line-height: 100%;
-                letter-spacing: 0%;
-                text-align: center;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+            border-radius: 4px;
+            text-decoration: none;
+            padding: 11px 16px;
+            font-size: 16px;
+            font-weight: 600;
+            line-height: 100%;
+            letter-spacing: 0%;
+            text-align: center;
 
-                color: $main-black;
-                background-color: $primary_yellow;
-                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            color: $main-black;
+            background-color: $primary_yellow;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+            svg {
+                flex-shrink: 0;
+                width: 16px;
+                height: 13px;
+                color: $accent_magenta;
+            }
+
+            @include media-breakpoint-up(md) {
+                border-radius: 12px;
+            }
+
+            @include media-breakpoint-up(xl) {
+                font-size: 20px;
+                padding: 14px 24px;
 
                 svg {
-                    flex-shrink: 0;
-                    width: 16px;
-                    height: 13px;
-                    color: $accent_magenta;
-                }
-
-                @include media-breakpoint-up(md) {
-                    border-radius: 12px;
-                }
-
-                @include media-breakpoint-up(xl) {
-                    font-size: 20px;
-                    padding: 14px 24px;
-
-                    svg {
-                        width: 24px;
-                        height: 22px;
-                    }
+                    width: 24px;
+                    height: 22px;
                 }
             }
+
+            &:hover, :focus-visible {
+                background: linear-gradient(0deg, rgba(255, 255, 255, 0.30) 0%, rgba(255, 255, 255, 0.30) 100%), $primary_yellow;
+            }
+
+            &:focus {
+                outline: 4px solid var(--accent_magenta, #C20054);
+                outline-offset: -4px;
+            }
+        }
 
         .mobile-actions {
             display: flex;
